--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name=description
         content="Página web estática dedicada a la película Regreso al futuro, donde se incluye información básica y algunos datos detallados sobre el rodaje, producción y distribución de la misma.">
     <meta name=keywords content="pelicula, movie, film, viaje en el tiempo, ciencia, delorean, ficción, hollywood ">
+    <meta name="google-site-verification" content="v1XhmgaTQRInVs-UCbn2rM7G2Lg2ZSi-1AoIRSGcKBs" />
 
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
     <link rel="stylesheet" type="text/css" href="estilo.css" />
